tests/ui/rust-2018/uniform-paths/deadlock.stderr
error[E0463]: can't find crate for `bar`
  --> $DIR/deadlock.rs:4:5
   |
LL | use bar::foo;
   |     ^^^ can't find crate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0463`.
